Resolves: fdo#67263 CRASH when deleting applied bulleted paragraph style

Change-Id: I70dc18363480e6c07577a93279ddd083631f6cc3
Reviewed-on: https://gerrit.libreoffice.org/6702
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>
(cherry picked from commit 899c5ea9dc3c34892edfde642510514779132910)